--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.13",
+    "eslint": "^9.13.0",
+    "eslint-plugin-svelte": "^2.46.0",
     "postcss": "^8.4.40",
-    "svelte": "^4.2.18",
+    "svelte": "4.2.19",
     "tailwindcss": "^3.4.7",
     "vite": "^5.3.4"
   },
@@ -20,7 +23,6 @@
     "@supabase/supabase-js": "^2.45.4",
     "chart.js": "^4.4.4",
     "lucide-svelte": "^0.438.0",
-    "nucomplaint": "file:",
     "svelte-spa-router": "^4.0.1"
   }
 }
