--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^4.12.13",
     "eslint": "^9.13.0",
     "eslint-plugin-svelte": "^2.46.0",
+    "html5-qrcode": "^2.3.8",
     "postcss": "^8.4.40",
     "svelte": "4.2.19",
     "tailwindcss": "^3.4.7",
@@ -23,6 +24,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "chart.js": "^4.4.4",
     "lucide-svelte": "^0.438.0",
+    "qrcode": "^1.5.4",
     "svelte-spa-router": "^4.0.1"
   }
 }
