--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "chart.js": "^4.4.4",
     "lucide-svelte": "^0.438.0",
+    "moment": "^2.30.1",
     "qrcode": "^1.5.4",
     "svelte-spa-router": "^4.0.1"
   }
