--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
     "chart.js": "^4.4.4",
+    "firebase": "^11.0.1",
     "lucide-svelte": "^0.438.0",
     "moment": "^2.30.1",
     "qrcode": "^1.5.4",
